ConnexoProject/force-app/main/default/objects/Affected_Third_Party__c/Affected_Third_Party__c.object-meta.xml
<CustomObject>
    <label>Affected Third Party</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Affected Third Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Third Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>