ConnexoProject/force-app/main/default/objects/Affected_Third_Party__c/fields/Change_Control__c.field-meta.xml
<CustomField>
    <fullName>Change_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Control</label>
    <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
    <relationshipLabel>Affected Third Parties</relationshipLabel>
    <relationshipName>Affected_Third_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>