ConnexoProject/force-app/main/default/objects/Affected_Third_Party__c/fields/Date_Notified_by_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Date_Notified_by_Third_Party__c</fullName>
    <label>Date Notified by Third Party</label>
    <type>Date</type>
</CustomField>