ConnexoProject/force-app/main/default/objects/Affected_Third_Party__c/fields/Third_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_ID__c</fullName>
    <label>Third Party ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>