ConnexoProject/force-app/main/default/objects/Affected_Third_Party__c/fields/Third_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Type__c</fullName>
    <label>Third Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>