ConnexoProject/force-app/main/default/objects/Affected_Third_Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Third_Party_Type__c</columns>
    <columns>Quality_Event__c</columns>
    <columns>Change_Control__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>